fx140: Fix menu icon overlap
Fix after #5343

--- a/scss/linux/_menu.scss
+++ b/scss/linux/_menu.scss
@@ -1,6 +1,6 @@
 menu,
 menuitem {
-	.menu-iconic-icon[src] {
+	.menu-icon[src] {
 		-moz-default-appearance: none;
 	}
 }
